--- a/templates/footer.html
+++ b/templates/footer.html
@@ -55,7 +55,7 @@
         <li><a href="{{url_for('concept')}}">Concept</a></li>
         <li><a href="{{url_for('pedagogie')}}">Pédagogie</a></li>
         <li><a href="{{url_for('about')}}">L'équipe</a></li>
-        <li><a href="{{url_for('about')}}">Contact</a></li>
+        <li><a href="{{url_for('contact')}}">Contact</a></li>
       </ul>
     </div>
 
