--- a/static/styles.css
+++ b/static/styles.css
@@ -42,6 +42,56 @@ h1 {
   margin-left: 15px;
 }
 
+#timeline:after {
+  position: absolute;
+  top: 0;
+  right: auto;
+  bottom: 0;
+  left: 50%;
+  width: 2px;
+  height: auto;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+  transform: translateX(-50%);
+  background: #d5d5d5;
+  content: '';
+  z-index: 0;
+}
+
+#timeline .container{
+  z-index: 1;
+  position: relative;
+}
+
+#timeline .step {
+  max-width: 500px;
+  padding: 30px 0;
+  margin : 0 auto;
+}
+
+#timeline .step .number {
+  font-size: 35px;
+  padding: 5px;
+  background-color: #f3f3f3;
+  color: #3f51b5;
+}
+
+#timeline .step h4 {
+
+}
+
+#timeline .step p {
+  color : #767777;
+  font-size: 20px;
+}
+
+#showcase .show {
+  background-size: cover !important;
+  height: 300px;
+}
+
 ::-moz-selection {
   background-color: #64ffda;
   color: black;
@@ -952,9 +1002,10 @@ hr.primary {
 
 .caption {
   padding: 120px 0;
-  background: url('./images/index/mockup.jpg') center center fixed;
+  background: url('./images/index/mockup.jpg') center center no-repeat;
   background-size: cover;
   color: white;
+  position: relative;
 }
 
 .services {
