Delete Concept and complete Pedagogie

--- a/templates/concept.html
+++ b/templates/concept.html
@@ -37,7 +37,7 @@ En savoir plus sur les avantages et le concept de la plateforme.
                 <div class="mdl-cell--middle section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
                   <h3 class="mdl-typography--title" style="margin:10px 0;">Contenu pédagogique d'une grande qualité</h3>
                   <p>
-                    Nous portons une grande attention au contenu que nous vous mettons à disposition.
+                    Nous portons une grande attention au contenu que nous mettons à votre disposition.
                     Ce contenu pédagogique a été choisi et réalisé par des professionels du secteur.
                   </p>
                 </div>
@@ -59,9 +59,9 @@ En savoir plus sur les avantages et le concept de la plateforme.
                   </div>
                 </div>
                 <div class="mdl-cell--middle section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
-                  <h3 class="mdl-typography--title" style="margin:10px 0;">Progression optimisée et un parcours d'apprentissage sur-mesure</h3>
+                  <h3 class="mdl-typography--title" style="margin:10px 0;">Progression optimisée et parcours d'apprentissage sur-mesure</h3>
                   <p>
-                  Grâce à nos technologies, nous sommes en mesure de vous proposer un <i>entrainement intelligent</i>  et un <i>parcours d'apprentissage optimisé</i>.
+                  Grâce à nos technologies, nous sommes en mesure de vous proposer un <b>entrainement intelligent</b>  et un <b>parcours d'apprentissage optimisé</b>.
                   </p>
                 </div>
                 <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone mdl-cell--middle">
@@ -70,7 +70,7 @@ En savoir plus sur les avantages et le concept de la plateforme.
                   </div>
                 </div>
                 <div class="mdl-cell--middle section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
-                  <h3 class="mdl-typography--title" style="margin:10px 0;">Plateforme web et des Applications mobiles</h3>
+                  <h3 class="mdl-typography--title" style="margin:10px 0;">Plateforme web et applications mobiles</h3>
                   <p>
                     Grâce à notre plateforme internet et nos applications iOS & android, vous travaillez quand vous voulez.
                   </p>
@@ -97,7 +97,7 @@ En savoir plus sur les avantages et le concept de la plateforme.
             <div class="mdl-card mdl-cell mdl-cell--9-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone">
               <div class="mdl-card__supporting-text">
                 <h2 style="margin-top:5px;" class="mdl-typography--headline">Des technologies inédites</h2>
-                PolyLearn repose sur des technologies qui permet d'optimiser votre temps de révision.
+                PolyLearn repose sur des technologies qui permettent d'optimiser votre temps de révision.
                 <ul>
                   <li>
                     <h3 class="mdl-typography--title">1. Identification des faiblesses</h3>
