--- a/templates/index.html
+++ b/templates/index.html
@@ -64,15 +64,15 @@
         <i class="material-icons">extension</i>
         <h4>Expérience utilisateur</h4>
         <p>
-          En plus d'une pédagogie centrée sur vous, nous avons travaillé sur des fonctionnalitées supplémentaires pour vous offrir une expérience incroyable.
+          En plus d'une pédagogie centrée sur vous, nous avons travaillé sur des fonctionnalités supplémentaires pour vous offrir une expérience incroyable.
         </p>
       </div>
     </div>
   </div>
 
   <div>
-    <a href="{{ url_for('concept')}}" class="mdl-button mdl-js-button mdl-button--primary">
-      Le concept
+    <a href="{{ url_for('pedagogie')}}" class="mdl-button mdl-js-button mdl-button--primary">
+      La pédagogie
     </a>
 
     <a href="{{ url_for('products')}}" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
@@ -116,7 +116,7 @@
       <span class="number">3</span>
       <h4>Entrainement</h4>
       <p class="mdl-typography--headline">
-        Vous pouvez vous entrainer, l'adaptative-learning mise en place va continuer à améliorer l'élaboration de votre programme d'apprentissage et ainsi vous faire gagner du temps
+        Vous pouvez vous entrainer, l'adaptative-learning mis en place va continuer à améliorer l'élaboration de votre programme d'apprentissage et ainsi vous faire gagner du temps
       </p>
     </div>
 
@@ -163,7 +163,7 @@
     <h3 class="mdl-typography--display-1 font-300">Des applications mobiles et une plateforme web</h3>
     <hr class="primary">
     <p style="max-width:550px; margin: 0 auto;">
-      Nous avons choisi de rendre disponible nos applications sur sur un grand nombre d'appareils afin que vous puissiez vous entrainer de n'importe où.
+      Nous avons choisi de rendre disponibles nos applications sur sur un grand nombre d'appareils afin que vous puissiez vous entrainer de n'importe où.
     </p>
     <br>
     <br>
