--- a/templates/products.html
+++ b/templates/products.html
@@ -33,7 +33,7 @@ PolyLearn peut vous aider à réussir votre TOEIC et votre Code de la Route
             10 examens blancs
           </li>
           <li>
-            20 heures d'entrainements
+            20 heures d'entrainement
           </li>
           <li>
             1 glossaire sur-mesure
@@ -58,13 +58,13 @@ PolyLearn peut vous aider à réussir votre TOEIC et votre Code de la Route
             100 cours et astuces
           </li>
           <li>
-            3000 question
+            3000 questions
           </li>
           <li>
             30 examens blancs
           </li>
           <li>
-            30 heures d'entrainements
+            30 heures d'entrainement
           </li>
           <li>
             Signalisation
@@ -94,13 +94,13 @@ PolyLearn peut vous aider à réussir votre TOEIC et votre Code de la Route
             100 cours et astuces
           </li>
           <li>
-            3000 question
+            3000 questions
           </li>
           <li>
             5 examens blancs
           </li>
           <li>
-            10 heures d'entrainements
+            10 heures d'entrainement
           </li>
           <li>
             1 glossaire sur-mesure
