--- a/templates/about.html
+++ b/templates/about.html
@@ -27,7 +27,7 @@ Découvrez l'équipe de PolyLearn
 
           <p>
             Passionné de nouvelles technologies et ayant grandi avec des parents entrepreneurs dans le domaine de la formation linguistique, j'ai souhaité créer un outil très performant correspondant à leurs besoins.
-            Celui ci utilise au mieux les apports qu'offre l'informatique au domaine de l'enseignement.
+            Celui-ci utilise au mieux les apports qu'offre l'informatique au domaine de l'enseignement.
             Individualisation, adaptation et personnalisation sont les maîtres mots.
           </p>
 
@@ -42,7 +42,7 @@ Découvrez l'équipe de PolyLearn
 
           <p>
             Passionné depuis toujours d'informatique, j'ai naturellement suivi cette voie en école d'ingénieur.
-            Je me suis alors spécialisé dans le Machine Learning domaine en pleine évolution qui m'intéresse énormément.
+            Je me suis alors spécialisé dans le Machine Learning, domaine en pleine évolution qui m'intéresse énormément.
             Je m'applique ainsi à optimiser différentes techniques de Data Mining dans le fonctionnement de nos outils pédagogiques afin que ceux-ci soient les plus efficients possibles.
           </p>
         </div>
