--- a/templates/pedagogie.html
+++ b/templates/pedagogie.html
@@ -11,24 +11,91 @@ Une pédagogie sur-mesure et une progression optimisée
 
         <h1 class="mdl-typography--text-center android-slogan android-font">La pédagogie</h1>
 
-        <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
-          <div class="mdl-card mdl-cell mdl-cell--9-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone">
-            <div class="mdl-card__supporting-text">
-              <h4>Une pédagogie centrée sur VOUS</h4>
-              Notre équipe pédagogique a rédigé l'intégralité des leçons relatives aux examens.
-              PolyLearn vous entraine sur celles qui vous posent problème afin de combler le plus rapidement possible vos lacunes.
-              Fini le bachotage inutile, nous cernons vos difficultés et vous aidons à y remédier.
+          <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+            <header class="section__play-btn mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--4-col-phone mdl-color--teal-100 mdl-color-text--white">
+            </header>
+            <div class="mdl-card mdl-cell mdl-cell--9-col-desktop mdl-cell--6-col-tablet mdl-cell--4-col-phone">
+              <div class="mdl-card__supporting-text">
+                <h4>Avoir la meilleure plateforme de préparation possible pour réussir un examen</h4>
+                Nous pensons que pour réussir un examen, il faut être dans les meilleures conditions possibles avec un outil adapté capable de faire gagner du temps et d'optimiser la progression.
+                PolyLearn vous entraine sur les leçons qui vous posent problème afin de combler le plus rapidement possible vos lacunes.
+                Fini le bachotage inutile, nous cernons vos difficultés et vous aidons à y remédier.
+              </div>
+              <div class="mdl-card__actions">
+                <a href="{{ url_for('products') }}" class="mdl-button">Voir les examens que nous pouvons vous aider à réussir</a>
+              </div>
+            </div>
+          </section>
+
+          <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+            <div class="mdl-card mdl-cell mdl-cell--12-col">
+              <div class="mdl-card__supporting-text mdl-grid mdl-grid--no-spacing">
+                <h2 class="mdl-cell mdl-cell--12-col mdl-typography--headline">Les + PolyLearn</h2>
+                <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone mdl-cell--middle">
+                  <div class="section__circle-container__circle">
+                    <img alt="Contenu pédagogique" src="https://cdn4.iconfinder.com/data/icons/flat-rounded-seo-icons/80/page-quality-128.png" width="100" height="100">
+                  </div>
+                </div>
+                <div class="mdl-cell--middle section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+                  <h3 class="mdl-typography--title" style="margin:10px 0;">Contenu pédagogique d'une grande qualité</h3>
+                  <p>
+                    Nous portons une grande attention au contenu que nous mettons à votre disposition.
+                    Ce contenu pédagogique a été choisi et réalisé par des <b>professionels du secteur</b>.
+                  </p>
+                </div>
+                <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone mdl-cell--middle">
+                  <div class="section__circle-container__circle">
+                    <img alt="Identification des faiblesses" src="{{url_for('static', filename='images/features/target.png')}}" width="100" height="100">
+                  </div>
+                </div>
+                <div class="mdl-cell--middle section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+                  <h3 class="mdl-typography--title" style="margin:10px 0;">Identification des faiblesses</h3>
+                  <p>
+                    L'<b>identification des faiblesses</b> est une technologie développée par <a href="/">PolyLearn</a> qui vous permet de cerner vos difficultés.
+                    Notre pédagogie est <b>centrée sur vous</b> !
+                  </p>
+                </div>
+                <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone mdl-cell--middle">
+                  <div class="section__circle-container__circle">
+                    <img alt="Progression optimisée" src="{{url_for('static', filename='images/features/parcours.png')}}" width="100" height="100">
+                  </div>
+                </div>
+                <div class="mdl-cell--middle section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+                  <h3 class="mdl-typography--title" style="margin:10px 0;">Progression optimisée et parcours d'apprentissage sur-mesure</h3>
+                  <p>
+                  Grâce à nos technologies, nous sommes en mesure de vous proposer un <b>entrainement intelligent</b>  et un <b>parcours d'apprentissage optimisé</b>.
+                  </p>
+                </div>
+                <div class="section__circle-container mdl-cell mdl-cell--2-col mdl-cell--1-col-phone mdl-cell--middle">
+                  <div class="section__circle-container__circle">
+                    <img alt="Multi-plateformes" src="{{url_for('static', filename='images/features/devices.png')}}" width="100" height="100">
+                  </div>
+                </div>
+                <div class="mdl-cell--middle section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+                  <h3 class="mdl-typography--title" style="margin:10px 0;">Plateforme web et applications mobiles</h3>
+                  <p>
+                    Grâce à notre plateforme internet et nos applications iOS & android, vous travaillez <b>quand et où vous voulez</b>.
+                  </p>
+                </div>
+              </div>
+              <!--
+              <div class="mdl-card__actions">
+                <a href="{{url_for('pedagogie')}}" class="mdl-button">En savoir plus sur notre pédagogie</a>
+              </div>
+              -->
             </div>
 
-            <div class="mdl-card__actions">
-              <a href="{{ url_for('products') }}" class="mdl-button">Voir les examens</a>
-            </div>
-          </div>
-
-          <header class="school-bg mdl-cell mdl-cell--3-col-desktop mdl-cell--2-col-tablet mdl-cell--4-col-phone mdl-color--teal-100 mdl-color-text--white">
-          </header>
-        </section>
-
+            <!--
+            <button class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon" id="btn2">
+              <i class="material-icons">more_vert</i>
+            </button>
+            <ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right" for="btn2">
+              <li class="mdl-menu__item">Lorem</li>
+              <li class="mdl-menu__item" disabled>Ipsum</li>
+              <li class="mdl-menu__item">Dolor</li>
+            </ul>
+          -->
+          </section>
 
 
         {% include 'includes/features.html' %}
