--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="android-be-together-section mdl-typography--text-center">
-  <div class="android-font android-slogan">Réussir n'a jamais été aussi facile</div>
+  <div class="android-font android-slogan">{% trans %}Réussir n'a jamais été aussi facile{% endtrans %}</div>
   <h1 class="android-font android-sub-slogan">Découvrez notre méthode d'entrainement utilisant des technologies inédites</h1>
 
   <div class="mdl-grid">
