Correct some spelling mistakes

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -87,7 +87,7 @@
   <div class="mdl-mega-footer__bottom-section">
     <div class="mdl-logo">PolyLearn © 2016</div>
     <ul class="mdl-mega-footer__link-list">
-      <li><a href="{{url_for('legal')}}">Conditions générales d'utilisations</a></li>
+      <li><a href="{{url_for('legal')}}">Conditions générales d'utilisation</a></li>
     </ul>
   </div>
 
