--- a/templates/legal.html
+++ b/templates/legal.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
 
-{% block title %}Conditions générales d'utilisations{% endblock %}
+{% block title %}Conditions générales d'utilisation{% endblock %}
 
 {% block description %}
-Retrouvez les conditions générales d'utilisations de PolyLearn
+Retrouvez les conditions générales d'utilisation de PolyLearn
 {% endblock %}
 
 {% block content %}
 <main class="mdl-demo grey-bg">
 
-  <h1 class="mdl-typography--text-center android-slogan android-font">Conditions générales d'utilisations</h1>
+  <h1 class="mdl-typography--text-center android-slogan android-font">Conditions générales d'utilisation</h1>
   <div class="container mdl-shadow--2dp mdl-color--white" style="border-radius:2px;">
   <section class="mdl-grid about">
     <h2 class="mdl-typography--headline">
@@ -18,8 +18,8 @@ Retrouvez les conditions générales d'utilisations de PolyLearn
     </h2>
 
 
-    <p>Conformément aux dispositions des Articles 6-III et 19 de la Loi n°2004-575 du 21 juin 2004 pour la Confiance dans l’économie numérique, dite L.C.E.N., il est porté à la connaissance des utilisateurs et visiteurs du site PolyLearn les présentes mentions légales.</p>
-    <p>Le site PolyLearn est accessible à l’adresse suivante : <a href="http://polylearn.co">polylearn.co</a> (ci-après “le Site”). L’accès et l’utilisation du Site sont soumis aux présentes " Mentions légales" détaillées ci-après ainsi qu’aux lois et/ou règlements applicables.
+    <p>Conformément aux dispositions des Articles 6-III et 19 de la Loi n°2004-575 du 21 juin 2004 pour la confiance dans l’économie numérique, dite L.C.E.N., il est porté à la connaissance des utilisateurs et visiteurs du site PolyLearn les présentes mentions légales.</p>
+    <p>Le site PolyLearn est accessible à l’adresse suivante : <a href="http://polylearn.co">polylearn.co</a> (ci-après “le Site”). L’accès et l’utilisation du Site sont soumis aux présentes "Mentions légales" détaillées ci-après ainsi qu’aux lois et/ou règlements applicables.
     La connexion, l’utilisation et l’accès à ce Site impliquent l’acceptation intégrale et sans réserve de l’internaute de toutes les dispositions des présentes Mentions Légales.</p>
     <h2 class="mdl-typography--headline"><a id="ARTICLE_1__INFORMATIONS_LGALES_5"></a>ARTICLE 1 - INFORMATIONS LÉGALES</h2>
     <p>En vertu de l’Article 6 de la Loi n° 2004-575 du 21 juin 2004 pour la confiance dans l’économie numérique, il est précisé dans cet article l’identité des différents intervenants dans le cadre de sa réalisation et de son suivi.
@@ -27,16 +27,16 @@ Retrouvez les conditions générales d'utilisations de PolyLearn
     SAS POLYLEARN
     ayant son siège social à l’adresse suivante : PolyLearn, 1 mail Gay LUSSAC 95015 Cergy-Pontoise CEDEX, et immatriculée au numéro suivant : RCS PONTOISE 818 772 303.
     Adresse e-mail : <a href="mailto:contact@polylearn.co">contact@polylearn.co</a>
-    ci après " l’Éditeur "</p>
+    (ci-après "l’Éditeur").</p>
     <p>Le Directeur de publication est :
     F.Clapié
-    Ci-après " le Directeur de publication "</p>
+    (ci-après "le Directeur de publication").</p>
     <p>Le site PolyLearn est hébergé par :
     Digital Ocean
     dont le siège est situé à l’adresse suivante : DigitalOcean, 101 Avenue of the Americas, 10th Floor, New York, NY 10013.
-    ci après " l’Hébergeur "</p>
+    (ci-après "l’Hébergeur").</p>
     <p>Sont considérés comme utilisateurs tout les internautes qui naviguent, lisent, visionnent et utilisent le site PolyLearn.
-    ci après les " Utilisateurs "</p>
+    (ci-après "les Utilisateurs").</p>
     <h2 class="mdl-typography--headline"><a id="ARTICLE_2__ACCESSIBILIT_25"></a>ARTICLE 2 - ACCESSIBILITÉ</h2>
     <p>Le Site est par principe accessible aux utilisateurs 24/24h et 7/7j, sauf interruption, programmée ou non, pour des besoins de maintenance ou en cas de force majeure.
     En cas d’impossibilité d’accès au Site, celui-ci s’engage à faire son maximum afin d’en rétablir l’accès. Le Site ne saurait être tenu pour responsable de tout dommage, quelle qu’en soit la nature, résultant de son indisponibilité.</p>
