feat() new icon

--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
   <div class="mdl-layout__header-row">
     <a href="/">
     <span class="android-title mdl-layout-title josefin">
-      <img alt="Logo Polylearn" class="android-logo-image" height="50" src="{{url_for('static', filename='images/logo-polylearn.jpg')}}">
+      <img alt="Logo Polylearn" class="android-logo-image" height="50" src="{{url_for('static', filename='images/logo-polylearn.svg')}}">
       <!--<span>PolyLearn</span>-->
     </span>
     </a>
@@ -40,7 +40,7 @@
 <div class="android-drawer mdl-layout__drawer">
   <span class="mdl-layout-title">
     <a href="/">
-      <img alt="Logo PolyLearn" class="android-logo-image" src="{{url_for('static', filename='images/logo-polylearn.jpg')}}">
+      <img alt="Logo PolyLearn" class="android-logo-image" src="{{url_for('static', filename='images/logo-polylearn.svg')}}">
     </a>
   </span>
   <nav class="mdl-navigation">
