--- a/templates/index.html
+++ b/templates/index.html
@@ -180,7 +180,7 @@
   "@context": "http://schema.org",
   "@type": "Organization",
   "url": "https://polylearn.co",
-  "logo": "https://polylearn.co/static/images/logo.png",
+  "logo": "https://polylearn.co/static/images/logo.svg",
   "sameAs" : [
     "https://www.facebook.com/polylearn.co/",
     "https://plus.google.com/+Polylearn",
